--- a/SmartPill.ipynb
+++ b/SmartPill.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0pwrtvOn780AZ8k08NdJ4",
+      "authorship_tag": "ABX9TyPcO9aK62TBf7TYB12JNxPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,63 +152,75 @@
         "import google.generativeai as genai\n",
         "from google.colab import userdata\n",
         "\n",
-        "# Obter a chave de API e configurar o genai\n",
+        "# Obter a chave de API e configurar o GenAI\n",
         "api_key = userdata.get(\"SECRET_KEY\")\n",
         "genai.configure(api_key=api_key)\n",
         "\n",
-        "system_instruction = \"Gere uma tabela de programação de medicamentos considerando as informações fornecidas. Cada linha na tabela deve representar um medicamento com as colunas correspondendo aos dias de tratamento, começando pela data de início especificada. Para cada medicamento, ajuste os horários de dose para coincidir com as refeições se necessário e não inclua horários de refeição já passados no dia de início. Use o formato de saída abaixo para a tabela:\\n\\nFormato da tabela:\\n- A primeira coluna deve listar o nome do medicamento.\\n- As colunas subsequentes devem representar cada dia de tratamento, iniciando pela data de início, com os horários das doses listados.\\n\\nExemplo de entrada:\\n- Nome do Medicamento: Aspirina, Frequência: 8h, Com Refeições: Sim, Dias: 10, Início: 20240510\\n- Nome do Medicamento: Ibuprofeno, Frequência: 12h, Com Refeições: Não, Dias: 15, Início: 20240510\\n\\nExpectativa de saída:\\n| Medicamento | 10/05/2024 | 11/05/2024 | 12/05/2024 | ... |\\n|-------------|------------|------------|------------|-----|\\n| Aspirina    | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | ... |\\n| Ibuprofeno  | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | ... |\"\n",
+        "# Instruções do sistema para o GenAI\n",
+        "system_instruction = \"Gere uma tabela de programação de medicamentos considerando as informações fornecidas. Cada linha na tabela deve representar um medicamento com as colunas correspondendo aos dias de tratamento, começando pela data de início especificada (ATENCAO QUE UM MEDICAMENTO PODE COMECAR A MINISTRACAO DEPOIS DA DATA DE OUTRO MEDICAMENTO). Para cada medicamento, ajuste os horários de dose para coincidir com as refeições sempre que possivel e não inclua horários de refeição já passados no dia de início. Use o formato de saída abaixo para a tabela:\\n\\nFormato da tabela:\\n- A primeira coluna deve listar o nome do medicamento.\\n- As colunas subsequentes devem representar cada dia de tratamento, iniciando pela data de início, com os horários das doses listados.\\n\\nExemplo de entrada:\\n- Nome do Medicamento: Aspirina, Frequência: 8h, Com Refeições: Sim, Dias: 10, Início: 20240510\\n- Nome do Medicamento: Ibuprofeno, Frequência: 12h, Com Refeições: Não, Dias: 15, Início: 20240510\\n\\nExpectativa de saída:\\n| Medicamento | 10/05/2024 | 11/05/2024 | 12/05/2024 | ... |\\n|-------------|------------|------------|------------|-----|\\n| Aspirina    | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | ... |\\n| Ibuprofeno  | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | ... |\"\n",
         "\n",
         "# Nome do modelo do GenAI\n",
         "model = genai.GenerativeModel(model_name='gemini-1.5-pro-latest', system_instruction=system_instruction)\n",
         "\n",
         "# Solicitar informações do usuário\n",
-        "quantidade = input(\"Quantos medicamentos deseja incluir no plano:\")\n",
-        "medicamento = input(\"Nome do primeiro Medicamento: \")\n",
-        "frequencia = input(\"Frequência (em horas): \")\n",
-        "refeicoes = input(\"Com refeições (Sim ou Não): \")\n",
-        "dias = input(\"Dias de Tratamento: \")\n",
-        "inicio = input(\"Data de Início (no formato AAAA-MM-DD): \")\n",
+        "quantidade = int(input(\"Quantos medicamentos deseja incluir no plano: \"))\n",
         "\n",
-        "# Gerar a programação usando o modelo GenAI\n",
-        "prompt_parts = [\n",
-        "    f\"Quantos medicamentos deseja incluir no plano: {quantidade}\",\n",
-        "    f\"Nome do primeiro Medicamento: {medicamento}\",\n",
-        "    f\"Frequência: {frequencia}\",\n",
-        "    f\"Com Refeições: {refeicoes}\",\n",
-        "    f\"Dias: {dias}\",\n",
-        "    f\"Início: {inicio}\",\n",
-        "]\n",
+        "medicamentos = []\n",
+        "frequencias = []\n",
+        "refeicoes_lista = []\n",
+        "dias_lista = []\n",
+        "inicios_lista = []\n",
+        "\n",
+        "for i in range(quantidade):\n",
+        "    medicamentos.append(input(f\"Nome do {i + 1}º Medicamento: \"))\n",
+        "    frequencias.append(input(f\"Frequência (em horas) do {i + 1}º Medicamento: \"))\n",
+        "    refeicoes_lista.append(input(f\"Com refeições (Sim ou Não) do {i + 1}º Medicamento: \"))\n",
+        "    dias_lista.append(input(f\"Dias de Tratamento do {i + 1}º Medicamento: \"))\n",
+        "    inicios_lista.append(input(f\"Data de Início (no formato DD-MM-AAAA) do {i + 1}º Medicamento: \"))\n",
+        "\n",
+        "# Gerar a programação usando o GenAI\n",
+        "prompt_parts = []\n",
+        "\n",
+        "for i in range(quantidade):\n",
+        "    prompt_parts.append(f\"Nome do Medicamento: {medicamentos[i]}\")\n",
+        "    prompt_parts.append(f\"Frequência: {frequencias[i]}\")\n",
+        "    prompt_parts.append(f\"Com Refeições: {refeicoes_lista[i]}\")\n",
+        "    prompt_parts.append(f\"Dias: {dias_lista[i]}\")\n",
+        "    prompt_parts.append(f\"Início: {inicios_lista[i]}\")\n",
         "\n",
         "response = model.generate_content(prompt_parts)\n",
         "\n",
-        "print(response.text)\n"
+        "print(response.text)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 273
+          "height": 327
         },
         "id": "6q2Wq7E9O-Bv",
-        "outputId": "fb081e26-41ae-4f77-941b-56835e7a80fc"
+        "outputId": "10d3585b-2fa3-4340-e959-3ce06901e040"
       },
-      "execution_count": 111,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Quantos medicamentos deseja incluir no plano:2\n",
-            "Nome do primeiro Medicamento: paracetamol\n",
-            "Frequência (em horas): 8h\n",
-            "Com refeições (Sim ou Não): sim\n",
-            "Dias de Tratamento: 4\n",
-            "Data de Início (no formato AAAA-MM-DD): 2024-05-10\n",
-            "Nome do segundo Medicamento: amoxicilinaFrequência: 12hCom Refeições: nãoDias: 7Início: 2024-05-12\n",
-            "\n",
-            "| Medicamento | 10/05/2024 | 11/05/2024 | 12/05/2024 | 13/05/2024 | 14/05/2024 | 15/05/2024 | 16/05/2024 |\n",
+            "Quantos medicamentos deseja incluir no plano: 2\n",
+            "Nome do 1º Medicamento: amoxilina\n",
+            "Frequência (em horas) do 1º Medicamento: 4h\n",
+            "Com refeições (Sim ou Não) do 1º Medicamento: sim\n",
+            "Dias de Tratamento do 1º Medicamento: 7\n",
+            "Data de Início (no formato DD-MM-AAAA) do 1º Medicamento: 09/05/2024\n",
+            "Nome do 2º Medicamento: paracetamol\n",
+            "Frequência (em horas) do 2º Medicamento: 8h\n",
+            "Com refeições (Sim ou Não) do 2º Medicamento: nao\n",
+            "Dias de Tratamento do 2º Medicamento: 7\n",
+            "Data de Início (no formato DD-MM-AAAA) do 2º Medicamento: 10/05/2024\n",
+            "| Medicamento | 09/05/2024 | 10/05/2024 | 11/05/2024 | 12/05/2024 | 13/05/2024 | 14/05/2024 | 15/05/2024 | \n",
             "|-------------|------------|------------|------------|------------|------------|------------|------------|\n",
-            "| paracetamol    | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 |             |             |             |\n",
-            "| amoxicilina  |             |             | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | \n",
+            "| amoxilina   | 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | \n",
+            "| paracetamol  | -            | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | \n",
             "\n"
           ]
         }
