--- a/SmartPill.ipynb
+++ b/SmartPill.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcO9aK62TBf7TYB12JNxPz",
+      "authorship_tag": "ABX9TyNoRAEvo5aOFzmW0HJBvhg8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,7 +157,7 @@
         "genai.configure(api_key=api_key)\n",
         "\n",
         "# Instruções do sistema para o GenAI\n",
-        "system_instruction = \"Gere uma tabela de programação de medicamentos considerando as informações fornecidas. Cada linha na tabela deve representar um medicamento com as colunas correspondendo aos dias de tratamento, começando pela data de início especificada (ATENCAO QUE UM MEDICAMENTO PODE COMECAR A MINISTRACAO DEPOIS DA DATA DE OUTRO MEDICAMENTO). Para cada medicamento, ajuste os horários de dose para coincidir com as refeições sempre que possivel e não inclua horários de refeição já passados no dia de início. Use o formato de saída abaixo para a tabela:\\n\\nFormato da tabela:\\n- A primeira coluna deve listar o nome do medicamento.\\n- As colunas subsequentes devem representar cada dia de tratamento, iniciando pela data de início, com os horários das doses listados.\\n\\nExemplo de entrada:\\n- Nome do Medicamento: Aspirina, Frequência: 8h, Com Refeições: Sim, Dias: 10, Início: 20240510\\n- Nome do Medicamento: Ibuprofeno, Frequência: 12h, Com Refeições: Não, Dias: 15, Início: 20240510\\n\\nExpectativa de saída:\\n| Medicamento | 10/05/2024 | 11/05/2024 | 12/05/2024 | ... |\\n|-------------|------------|------------|------------|-----|\\n| Aspirina    | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | 08:00, 12:00, 19:00 | ... |\\n| Ibuprofeno  | 00:00, 12:00 | 00:00, 12:00 | 00:00, 12:00 | ... |\"\n",
+        "system_instruction = \"Gere uma tabela de programação de medicamentos considerando as informações fornecidas. Cada linha na tabela deve representar um medicamento com as colunas correspondendo aos dias de tratamento, começando pela data de início especificada (ATENÇÃO QUE UM MEDICAMENTO PODE COMEÇAR A MINISTRAÇÃO DEPOIS DA DATA DE OUTRO MEDICAMENTO). Para cada medicamento, ajuste os horários de dose para coincidir com as refeições sempre que possível e não inclua horários de refeição já passados no dia de início.\"\n",
         "\n",
         "# Nome do modelo do GenAI\n",
         "model = genai.GenerativeModel(model_name='gemini-1.5-pro-latest', system_instruction=system_instruction)\n",
@@ -190,39 +190,164 @@
         "\n",
         "response = model.generate_content(prompt_parts)\n",
         "\n",
-        "print(response.text)"
+        "print(response.text)\n",
+        "# Criação do PDF no modo paisagem\n",
+        "pdf_file_name = \"medication_schedule.pdf\"\n",
+        "c = canvas.Canvas(pdf_file_name, pagesize=landscape(letter))\n",
+        "\n",
+        "# Processamento de dados para a tabela a partir da resposta\n",
+        "# Este passo requer que a resposta do texto seja ajustada a um formato de lista de listas adequado para a Table.\n",
+        "# Aqui estamos assumindo que a resposta está formatada como uma série de linhas de texto, cada uma representando um medicamento com suas datas e horários.\n",
+        "data = []\n",
+        "response_lines = response.text.split(\"\\n\")\n",
+        "for line in response_lines:\n",
+        "    columns = line.split(\"|\")\n",
+        "    if columns and len(columns) > 1:  # Ignorar linhas vazias ou inválidas\n",
+        "        data.append([col.strip() for col in columns if col.strip()])  # Limpar e remover colunas vazias\n",
+        "\n",
+        "# Configuração da tabela\n",
+        "t = Table(data)\n",
+        "t.setStyle(TableStyle([\n",
+        "    ('BACKGROUND', (0,0), (-1,0), colors.grey),\n",
+        "    ('GRID', (0,0), (-1,-1), 1, colors.black),\n",
+        "    ('TEXTCOLOR', (0,0), (-1,0), colors.whitesmoke),\n",
+        "    ('ALIGN', (0,0), (-1,-1), 'CENTER'),\n",
+        "    ('VALIGN', (0,0), (-1,-1), 'MIDDLE')\n",
+        "]))\n",
+        "\n",
+        "# Desenho da tabela no canvas\n",
+        "t.wrapOn(c, 800, 300)  # Ajustar as dimensões conforme necessário\n",
+        "t.drawOn(c, 50, 150)  # Ajustar a posição conforme necessário\n",
+        "\n",
+        "# Finalizar e salvar o PDF\n",
+        "c.save()\n",
+        "\n",
+        "# Fazer o download do arquivo PDF no Colab\n",
+        "files.download(pdf_file_name)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 836
         },
         "id": "6q2Wq7E9O-Bv",
-        "outputId": "10d3585b-2fa3-4340-e959-3ce06901e040"
+        "outputId": "55ec894b-eb38-4589-80c0-20f371427e12"
       },
-      "execution_count": 115,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Quantos medicamentos deseja incluir no plano: 2\n",
-            "Nome do 1º Medicamento: amoxilina\n",
+            "Nome do 1º Medicamento: paracetamol\n",
             "Frequência (em horas) do 1º Medicamento: 4h\n",
-            "Com refeições (Sim ou Não) do 1º Medicamento: sim\n",
-            "Dias de Tratamento do 1º Medicamento: 7\n",
+            "Com refeições (Sim ou Não) do 1º Medicamento: nao\n",
+            "Dias de Tratamento do 1º Medicamento: 5\n",
             "Data de Início (no formato DD-MM-AAAA) do 1º Medicamento: 09/05/2024\n",
-            "Nome do 2º Medicamento: paracetamol\n",
-            "Frequência (em horas) do 2º Medicamento: 8h\n",
-            "Com refeições (Sim ou Não) do 2º Medicamento: nao\n",
+            "Nome do 2º Medicamento: amoxilina\n",
+            "Frequência (em horas) do 2º Medicamento: 12h\n",
+            "Com refeições (Sim ou Não) do 2º Medicamento: sim\n",
             "Dias de Tratamento do 2º Medicamento: 7\n",
             "Data de Início (no formato DD-MM-AAAA) do 2º Medicamento: 10/05/2024\n",
-            "| Medicamento | 09/05/2024 | 10/05/2024 | 11/05/2024 | 12/05/2024 | 13/05/2024 | 14/05/2024 | 15/05/2024 | \n",
-            "|-------------|------------|------------|------------|------------|------------|------------|------------|\n",
-            "| amoxilina   | 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | 08:00, 12:00, 16:00, 20:00 | \n",
-            "| paracetamol  | -            | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | 08:00, 16:00 | \n",
-            "\n"
+            "## Programação de Medicação\n",
+            "\n",
+            "| Data | Horário | paracetamol | amoxilina | Refeição |\n",
+            "|---|---|---|---|---|\n",
+            "| 09/05/2024 | 12:00 | X |  |  |\n",
+            "| 09/05/2024 | 16:00 | X |  |  |\n",
+            "| 09/05/2024 | 20:00 | X |  |  |\n",
+            "| 10/05/2024 | 00:00 | X |  |  |\n",
+            "| 10/05/2024 | 04:00 | X |  |  |\n",
+            "| 10/05/2024 | 08:00 | X | X | Café da manhã |\n",
+            "| 10/05/2024 | 12:00 | X |  |  |\n",
+            "| 10/05/2024 | 16:00 | X |  |  |\n",
+            "| 10/05/2024 | 20:00 | X | X | Jantar |\n",
+            "| 11/05/2024 | 00:00 |  | X |  |\n",
+            "| 11/05/2024 | 04:00 |  |  |  |\n",
+            "| 11/05/2024 | 08:00 |  | X | Café da manhã |\n",
+            "| 11/05/2024 | 12:00 |  |  |  |\n",
+            "| 11/05/2024 | 16:00 |  |  |  |\n",
+            "| 11/05/2024 | 20:00 |  | X | Jantar |\n",
+            "| 12/05/2024 | 00:00 |  | X |  |\n",
+            "| 12/05/2024 | 08:00 |  | X | Café da manhã |\n",
+            "| 12/05/2024 | 20:00 |  | X | Jantar |\n",
+            "| 13/05/2024 | 08:00 |  | X | Café da manhã |\n",
+            "| 13/05/2024 | 20:00 |  | X | Jantar |\n",
+            "| 14/05/2024 | 08:00 |  | X | Café da manhã |\n",
+            "| 14/05/2024 | 20:00 |  | X | Jantar |\n",
+            "| 15/05/2024 | 08:00 |  | X | Café da manhã |\n",
+            "\n",
+            "**Observações:**\n",
+            "\n",
+            "*  A tabela considera que as refeições principais (café da manhã e jantar) ocorrem às 08:00 e 20:00, respectivamente. \n",
+            "* A programação pode ser ajustada de acordo com seus horários de refeição.\n",
+            "* Consulte um médico ou farmacêutico para obter orientação específica sobre a sua medicação.\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_0c383694-1fbe-4974-8091-5bee8175ef45\", \"medication_schedule.pdf\", 2524)"
+            ]
+          },
+          "metadata": {}
         }
       ]
     }
